2005-02-06    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt): -- is made ARG in certain situations

2005-01-27    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt): DD otion added
	(main): integer now active in unit_test

2005-01-26    <tino@firebird.03.softkill.net>

	* xd.h (main, xd): added
	(tino_xd): improved for better formatting

	* sock.h (tino_sock_getaddr, tino_sock_tcp_listen): added from
	accept.c/socklinger.c

	* setproctitle.h (tino_setproctitle): superfluous variable removed.

	* str.h (tino_str_vprintf): better FATAL text

	* getopt.h (main): debug output corrected

	* Makefile.tino.dist (ADD_CFLAGS): warning added.

	* Makefile-test.sh (CFLAGS): -I- added, as this is needed for unit
	tests.  Note that you *must* include tino/NAME.h and *must*not*
	use -Itino, as this interferes with includes of the standard
	system headers (some names are redefined, -Itino then grabs the
	wrong include for <...> includes).  Also please be very carful in
	case you have -I., as this may break similar ways.  So if you use
	-I, be sure to use -I- appropriately.
	
2005-01-25    <tino@firebird.03.softkill.net>

	* Makefile-test.sh (genit): TINO_FILE_EXCEPTION added to allow
	"make test" to work again.

	* exception.h (tino_throw_str): corrected, and other changes to
	make this file include.  IT IS STILL NOT USABLE!
	
	* file.h: minor clarifications

	* ex.h (TINO_EXIT): added for exception overwrite
	
	* fatal.h (TINO_FATAL): added for exception overwrite

	* str.h (tino_str_vprintf_null, tino_str_vprintf): added

2005-01-04    <tino@firebird.03.softkill.net>

	* exception.h, io.h: continued to write, still not ready

	* memwild.h: Unit test added

	* setproctitle.h (main): improved for make test

	* dev.h: include fix for make test

	* Makefile-test.sh: added for unit tests

	* Makefile: make test

2004-12-07    <tino@firebird.03.softkill.net>

	* setproctitle.h: added

2004-11-03    <tino@firebird.03.softkill.net>
